--- a/src/app/chameleon-reports/erinfo/erinfo.component.scss
+++ b/src/app/chameleon-reports/erinfo/erinfo.component.scss
@@ -301,3 +301,7 @@ button i.material-icons {
   position: relative;
   padding-left: 40px;
 }
+.bold-header-table .mat-header-cell {
+  font-weight: bold;
+  color: #000; /* Black */
+}
